--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
 	"dependencies": {
 		"@tailwindcss/cli": "^4.0.6",
 		"tailwindcss": "^4.0.6"
+	},
+	"scripts": {
+		"dev" : "npx @tailwindcss/cli -i input.css -o output.css --watch",
+		"build": "npx @tailwindcss/cli -i input.css -o output.css --minify"
 	}
 }
